as sent to heckman

--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -21,7 +21,7 @@ To avoid cherry-picking and reporting outcomes with ``significant'' treatment ef
 
 Table~\ref{table:summary} reveals that participation in ABC/CARE benefited both females and males across the life cycle. Across the life cycle, the average effect size for females is $0.381$, the percentage of positive treatment effects is $94\%$, and the percentage of significant treatment effects at the $10\%$ level is $63\%$. For males, the average effect size is $0.254$, the percentage of positive treatment effects is $78\%$, and the percentage of significant treatment effects at the $10\%$ level is $41\%$. We also present $p$-values from an exact non-parametric test of equality of the treatment and control distributions. All measures consistently show beneficial effects of the program. 
 
-Table~\ref{table:summary} also reveals that in terms of effect sizes over multiple outcomes, girls benefit more than boys. This holds across the life cycle and for all of the summary measures.\footnote{This finding of females benefitting more than males (except in health) is consistent with previous work studying the gender differences in early childhood education. We survey the literature in Appendix~\ref{appendix:gdiff-survey}. See \citet{Elango_Hojman_etal_2016_Early-Edu} for a discussion of the main findings from the literature on early childhood education. Not reporting gender differences is common. Some examples include \citet{Bernal_Keane_2011_JoLE,Cascio_Schanzenbach_2013_ImpactsExpandingAccess,Bitler_et_al_2014_Head_Start_Unpublished,Kline_Walters_2016_QJE}. There are some exceptions: \citet{Anderson_2008_JASA,Heckman_Moon_etal_2010_QE,Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}} The gender treatment effects arise because control-group girls grow up in less favorable environments compared to control-group boys. Specifically, in the homes of girls, fewer fathers are present and maternal education and IQ are lower. Girls in the control group who stay at home ($27\%$ of the control-group girls), were raised in more disadvantaged environments. Girls who went to preschools other than ABC/CARE ($73\%$ of the control-group girls), likely went to lower-quality preschools because their families were more resource constrained compared to their male counterparts for whom more fathers are present. Thus, girls benefited more from treatment because they would have otherwise grown up in more disadvantaged environments.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev} show that the quality of the available alternatives was of lower quality than the treatment offered through ABC/CARE. We supplement this evidence with historical records showing that even the alternatives that followed state and federal standards of the era were of lower quality than ABC/CARE as measured by concrete measures such as staff-child ratios. We provide more detail on the quality of ABC/CARE and the alternative options in Section~\ref{sec:data} and Appendix~\ref{appendix:background}.}
+Table~\ref{table:summary} also reveals that in terms of effect sizes over multiple outcomes, girls benefit more than boys. This holds across the life cycle and for all of the summary measures.\footnote{This finding of females benefitting more than males (except in health) is consistent with previous work studying the gender differences in early childhood education. We survey the literature in Appendix~\ref{appendix:gdiff-survey}. See \citet{Elango_Hojman_etal_2016_Early-Edu} for a discussion of the main findings from the literature on early childhood education. Not reporting gender differences is common. Some examples include \citet{Bernal_Keane_2011_JoLE,Cascio_Schanzenbach_2013_ImpactsExpandingAccess,Bitler_et_al_2014_Head_Start_Unpublished,Kline_Walters_2016_QJE}. There are some exceptions: \citet{Anderson_2008_JASA,Heckman_Moon_etal_2010_QE,Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}} The gender treatment effects arise because control-group girls grow up in less favorable environments compared to control-group boys. Specifically, in the homes of girls, fewer fathers are present and maternal education and IQ are lower. Girls in the control group who stay at home ($27\%$ of the control-group girls), were raised in more disadvantaged environments. Girls who went to preschools other than ABC/CARE ($73\%$ of the control-group girls), likely went to lower-quality preschools because their families were more resource constrained compared to their male counterparts for whom more fathers are present \textbf{[JJH: Do we really know this?][We added a footnote to better explain this point. We know that the alternative preschools were lower quality than ABC/CARE and we know that girls were more resource constrained. We don't have direct evidence that girls went to lower-quality alternatives than boys. Our measures of the quality of individual preschools come from Peg's recollection and some historical documentation of federal standards. Although these are qualitatively interesting and point to the conclusion that the alternatives are lower quality than ABC/CARE, we cannot precisely determine who went to a better or worse quality alternative.]}.\footnote{We do not have precise measures of the quality of individual alternative preschools, although we do show that girls were more disadvantaged. This implies that their families would have fewer resources to send them to relatively better alternative preschools.} Thus, girls benefited more from treatment because they would have otherwise grown up in more disadvantaged environments.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev} show that the quality of the available alternatives was of lower quality than the treatment offered through ABC/CARE. We supplement this evidence with historical records showing that even the alternatives that followed state and federal standards of the era were of lower quality than ABC/CARE as measured by concrete measures such as staff-child ratios. We provide more detail on the quality of ABC/CARE and the alternative options in Section~\ref{sec:data} and Appendix~\ref{appendix:background}.}
 
 There is an important difference in the within-gender take-up of alternatives (families randomized to the control group have multiple child care alternatives). Among control-group girls, the more disadvantaged stayed at home. Among control-group boys, the relatively advantaged boys stayed at home more often instead of attending the lower-quality preschool alternatives. 
 
