--- a/sections/2_data.tex
+++ b/sections/2_data.tex
@@ -68,11 +68,11 @@ Figure~\ref{fig:treatsubcare} shows the cumulative distribution of the proportio
 
 Children in the control group enrolled in alternative early childcare programs are less economically disadvantaged at baseline compared to children who stay at home, as measured by maternal education, maternal IQ, Apgar scores, and the High Risk Index defining ABC/CARE eligibility. Children who attend lower-quality alternative care have fewer siblings. On average, they are children of mothers who are more likely to be working at baseline (statistically significant at 10\%). Parents of girls are much more likely to use alternative center childcare if assigned to the control group. Table~\ref{table:controlsubscharacteristics} tests differences across these variables between children in the control group who attended and those who did not attend alternative childcare. 
 
-The only statistically significant difference in observed baseline characteristics between the controls who use formal childcare and those who stay at home is on whether the mother works. For children attending alternative care, the mother is more likely to work. This is especially true for female subjects. For male subjects, the labor supply of the mothers is statistically the same with 14\% (s.e. 14) of the mothers working for boys who stay at home and 29\% (s.e. 11) for boys in alternative care. This is consistent with a higher percentage of fathers being present when the subject is male. We discuss the selection into alternative care settings by gender extensively in Section~\ref{sec:gender-differences},
+The only statistically significant difference in observed baseline characteristics between the controls who use formal childcare and those who stay at home is on whether the mother works. For children attending alternative care, the mother is more likely to work. This is especially true for female subjects. For male subjects, the labor supply of the mothers is statistically the same with 14\% (s.e. 14\%) of the mothers working for boys who stay at home and 29\% (s.e. 11\%) for boys in alternative care. This is consistent with a higher percentage of fathers being present when the subject is male. We discuss the selection into alternative care settings by gender extensively in Section~\ref{sec:gender-differences}.
 
-While most of the alternative childcare centers received federal subsidies and were subject to the federal regulations of the era, they were relatively low-quality compared to ABC/CARE \citep{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}. In terms of child-staff ratios, ABC/CARE far exceeded the highest state and federal standards of the day.\footnote{Appendix~\ref{appendix:tetanus} shows this and discusses the standards of the day \citep{Department-of-Health_1968_DayCareRequirements,NCGA_1971_House-Bill-100,Ramey-et-al_1977_Intro-to-ABC,Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach,Burchinal_Campbell_etal_1997_CD}} We do not have baseline information on the quality of the home care to be able to precisely analyze the environments of those who stayed at home. \textbf{[JJH: We know they have higher income!]}
+While most of the alternative childcare centers received federal subsidies and were subject to the federal regulations of the era, they were relatively low-quality compared to ABC/CARE \citep{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}. In terms of child-staff ratios, ABC/CARE far exceeded the highest state and federal standards of the day.\footnote{Appendix~\ref{appendix:tetanus} shows this and discusses the standards of the day \citep{Department-of-Health_1968_DayCareRequirements,NCGA_1971_House-Bill-100,Ramey-et-al_1977_Intro-to-ABC,Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach,Burchinal_Campbell_etal_1997_CD}} We do not have baseline information on the quality of the parent-child interaction to be able to precisely analyze the environments of those who stayed at home. \textbf{[JJH: We know they have higher income!][Yes, we know the baseline characteristics of the household in a broad way, but we do not have baseline measures of parent-child interaction. We clarified this in the preceding sentence.]}
 
-When we compare ABC/CARE treatment to the alternative preschools, ABC/CARE has substantial treatment effects. Given the full compliance, parents clearly perceived that ABC/CARE was superior to the alternative preschools. The access of control-group children to alternative programs creates both a problem of substitution bias \citep{Heckman_1992_randomization,Heckman_Hohmann_etal_2000_QJE, Kline_Walters_2016_QJE} and an opportunity to learn about the benefits or harms of lower-quality childcare arrangements. With the heterogeneous experiences of the control-group subjects, we can separately compare the effect of an enriched treatment against home and lower-quality center environments. \textbf{[JJH: We barely touch this.]}
+When we compare ABC/CARE treatment to the alternative preschools, ABC/CARE has substantial treatment effects. Given the full compliance, parents clearly perceived that ABC/CARE was superior to the alternative preschools. The access of control-group children to alternative programs creates both a problem of substitution bias \citep{Heckman_1992_randomization,Heckman_Hohmann_etal_2000_QJE, Kline_Walters_2016_QJE} and an opportunity to learn about the benefits or harms of lower-quality childcare arrangements. With the heterogeneous experiences of the control-group subjects, we can separately compare the effect of an enriched treatment against home and lower-quality center environments. 
 
 \subsection{Data Collection}
 
