--- a/sections/3_parameters.tex
+++ b/sections/3_parameters.tex
@@ -1,5 +1,3 @@
-\textbf{[JJH: This needs to be rewritten.][This section has been rewritten.]}
-
 Random assignment to treatment does not guarantee that conventional treatment effect estimators answer policy-relevant questions. We define and estimate three parameters that address different policy questions.
 
 Let $W=1$ indicate that the parents referred to the program participate in the randomization protocol. $W=0$ indicates otherwise. $R$ indicates randomization into the treatment group ($R = 1$) or to the control group ($R = 0$). $D$ indicates attending the program, i.e., $D = R$ implies compliance with the initial randomization protocol.
@@ -55,7 +53,7 @@ Under the null hypothesis of no treatment effects for the block of outcomes inde
 
 The test based on the number of outcomes for which the treatment effect is significant at the $10\%$ level is analogous. Under the null hypothesis, 10\% of all outcomes should be ``significant'' at the 10\% level even if there is no treatment effect of the program.\footnote{In this case, we perform a ``double bootstrap'' procedure to first determine significant treatment effects at $10\%$ level and then calculate the standard error of the count.} The combining functions avoid: (i) arbitrarily picking outcomes that have statistically significant effects---``cherry picking''; or (ii) arbitrarily selecting blocks of outcomes to correct the $p$-values when accounting for multiple hypothesis testing. We present $p$-values for these hypotheses and a number of combining functions by outcome category in Appendix~\ref{appendix:results}.\footnote{In Appendix~\ref{appendix:results}, we present yet another alternative. We calculate a ``latent'' outcome out of the set of outcomes within a block and perform inference on this latent outcome. This analysis also points to beneficial effects of the program.}
 
-\textbf{A Non-Parametric Exact Test.} We also test for equality of treatment and control distributions by outcome using an exact test developed by \citet{Rosenbaum_2005_Distribution_JRSS}. We provide a brief explanation of the test and refer interested readers to the source for more details. Let $\mathcal{N}$ index the individuals in our sample and consider the block of outcomes $\mathcal{J}_\ell$. Let $d_{ii'}$ be the distance between the individuals $i, i' \in \mathcal{N}$, $i \neq i'$, based on the outcomes in $\mathcal{J}_\ell$. In our application, this is the Mahalanobis distance \citep{Mahalanobis_1936_PNISI}. There is an optimal non-bipartite pairing of individuals according to $d_{ii'}$ \citep{Derigs_1988_Solving_AOR}. This is obtained when minimizing the distance across all possible pairings $i, i'$ in the sample. 
+\textbf{An Exact Non-Parametric Test.} We also test for equality of treatment and control distributions by outcome using an exact test developed by \citet{Rosenbaum_2005_Distribution_JRSS}. We provide a brief explanation of the test and refer interested readers to the source for more details. Let $\mathcal{N}$ index the individuals in our sample and consider the block of outcomes $\mathcal{J}_\ell$. Let $d_{ii'}$ be the distance between the individuals $i, i' \in \mathcal{N}$, $i \neq i'$, based on the outcomes in $\mathcal{J}_\ell$. In our application, this is the Mahalanobis distance \citep{Mahalanobis_1936_PNISI}. There is an optimal non-bipartite pairing of individuals according to $d_{ii'}$ \citep{Derigs_1988_Solving_AOR}. This is obtained when minimizing the distance across all possible pairings $i, i'$ in the sample. 
 
 Under the null hypothesis of no treatment effects, pairings of treatment-group children with control-group children should be as frequent as pairings of treatment-group children with treatment-group children and control-group children with control-group children. If a relatively large number of pairs are matched equally across groups using this metric, we fail to reject the null hypothesis that the joint distribution of outcomes in block $\mathcal{J}_\ell$ is the same across the treatment and control groups.
 
