--- a/sections/5_gender-differences.tex
+++ b/sections/5_gender-differences.tex
@@ -11,24 +11,24 @@ The effects on crime highlight that females were highly impacted by ABC/CARE, es
 
 \begin{table}[!htpb]
 \begin{threeparttable}
-\caption{Combining Functions and Non-Parametric, Exact Tests, Treatment vs. Alternative} \label{table:massivealt}
+\caption{Combining Functions and Exact Non-Parametric Tests, Treatment vs. Alternative} \label{table:massivealt}
 \centering
  \input{output/raw-rosenbaum-table-cats-exp-TvCa-updated-10-10.tex} 
 \begin{tablenotes}
 \footnotesize
-\item \footnotesize \textbf{Note:} This table displays summaries of treatment effects by outcome category and gender. The comparison group is the control-group children who attend alternatives. The panels contains statistics calculated using outcomes grouped by category. The average effect size is calculated by averaging over the effect size of the outcomes in the outcome category. The effect sizes of the individual outcomes are calculated by dividing the coefficient by the standard deviation of the control group. We test these three statistics bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution of the variables in each category. Statistics significant at the $0.10$ level are bolded.
+\item \scriptsize \textbf{Note:} This table displays summaries of treatment effects by outcome category and gender. The comparison group is the control-group children who attend alternatives. The panels contains statistics calculated using outcomes grouped by category. The average effect size is calculated by averaging over the effect size of the outcomes in the outcome category. The effect sizes of the individual outcomes are calculated by dividing the coefficient by the standard deviation of the control group. We test these three statistics bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution of the variables in each category. For computational simplicity, we approximate the exact $p$-values using asymptotic $p$-values. \citet{Rosenbaum_2005_Distribution_JRSS} presents several simulation exercises showing that the validity of this approximation. Statistics significant at the $0.10$ level are bolded.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
 
 \begin{table}[!htpb]
 \begin{threeparttable}
-\caption{Combining Functions and Non-Parametric, Exact Tests, Treatment vs. Home Care} \label{table:massivehome}
+\caption{Combining Functions and Exact Non-Parametric Tests, Treatment vs. Home Care} \label{table:massivehome}
 \centering
  \input{output/raw-rosenbaum-table-cats-exp-TvCh-updated-10-10.tex} 
 \begin{tablenotes}
 \footnotesize
-\item  \footnotesize \textbf{Note:} This table displays summaries of treatment effects by outcome category and gender. The comparison group is the control-group children who stay at home.The panels contains statistics calculated using outcomes grouped by category. The average effect size is calculated by averaging over the effect size of the outcomes in the outcome category. The effect sizes of the individual outcomes are calculated by dividing the coefficient by the standard deviation of the control group. We test these three statistics bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution of the variables in each category. Statistics significant at the $0.10$ level are bolded.
+\item  \scriptsize \textbf{Note:} This table displays summaries of treatment effects by outcome category and gender. The comparison group is the control-group children who stay at home.The panels contains statistics calculated using outcomes grouped by category. The average effect size is calculated by averaging over the effect size of the outcomes in the outcome category. The effect sizes of the individual outcomes are calculated by dividing the coefficient by the standard deviation of the control group. We test these three statistics bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution of the variables in each category. For computational simplicity, we approximate the exact $p$-values using asymptotic $p$-values. \citet{Rosenbaum_2005_Distribution_JRSS} presents several simulation exercises showing that the validity of this approximation. Statistics significant at the $0.10$ level are bolded.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
