--- a/sections/4_treatment-effects.tex
+++ b/sections/4_treatment-effects.tex
@@ -2,12 +2,12 @@ This section presents the treatment effects. To be as inclusive as possible, we 
 
 \begin{table}[!htpb]
 \begin{threeparttable}
-\caption{Combining Functions and Non-Parametric, Exact Tests} \label{table:massiveall}
+\caption{Combining Functions and Exact Non-ParametricTests} \label{table:massiveall}
 \centering
 \input{output/raw-rosenbaum-table-cats-exp-TvC-updated-10-10.tex} 
 \begin{tablenotes}
-\footnotesize
-\item \textbf{Note:} This table displays summaries of treatment effects by outcome category and gender. Each of the panels contains statistics calculated using outcomes grouped by category. The average effect size is calculated by averaging over the effect size of the outcomes in the outcome category. The effect sizes of the individual outcomes are calculated by dividing the treatment-control mean difference by the standard deviation of the control group. We present bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the average effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution of the variables in each category. Statistics significant at the $0.10$ level are bolded.
+\scriptsize
+\item \textbf{Note:} This table displays summaries of treatment effects by outcome category and gender. Each of the panels contains statistics calculated using outcomes grouped by category. The average effect size is calculated by averaging over the effect size of the outcomes in the outcome category. The effect sizes of the individual outcomes are calculated by dividing the treatment-control mean difference by the standard deviation of the control group. We present bootstrapped $p$-values. For the proportion of outcomes that are positive and significant, we do a ``double bootstrap'' procedure. The null hypothesis for the average effect sizes is that they are 0. The null hypothesis for the proportion of outcomes that are (significantly) positive is that they are (10\%) 50\%. Bolded statistics are significant at the 10\% level. The \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value originates from a test where the null is a common joint distribution of the variables in each category. For computational simplicity, we approximate the exact $p$-values using asymptotic $p$-values. \citet{Rosenbaum_2005_Distribution_JRSS} presents several simulation exercises showing that the validity of this approximation. Statistics significant at the $0.10$ level are bolded.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
