fixxing one more isssue

--- a/sections/5_gender-differences.tex
+++ b/sections/5_gender-differences.tex
@@ -6,7 +6,7 @@ We rely on econometric methods to identify treatment effects (3) and (4). In the
 \textbf{[JJH: Rosenbaum is being misinterpreted.][JLG: You are right, as I believe we discussed in your office. The comparison of the magnitude of the $p$-values is wrong. In that case, and given the small sample sizes, the other tests are \textit{really} going to lack power here. We have tried everything here. I propose that we present the combining functions of the proportion of positive treatment effects for the refined counterfactual comparison, as we use to do. These plots actually began to lead us into the gender differences that we detected. Once we display that pattern, we can then distill the within-boy and within-girl disadvantage.]}
 
 
-We consider a total of 126 outcomes reported in Appendix~\ref{appendix:gdiff-tes}. Given the large number of outcomes measured in the numerous follow-ups, reporting all treatment effects would overwhelm the reader. \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, aggregates treatment effects by monetizing benefits and constructing lifetime profiles of outcomes to conduct cost/benefit and rate of return analyses. 
+We consider a total of 126 outcomes reported in Appendix~\ref{appendix:methodology}. Given the large number of outcomes measured in the numerous follow-ups, reporting all treatment effects would overwhelm the reader. \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, aggregates treatment effects by monetizing benefits and constructing lifetime profiles of outcomes to conduct cost/benefit and rate of return analyses. 
 
 In this section, we report treatment effects by category and the proportion of statistically significant effects. We use combining functions, which count the number of positive (and significant) treatment effects by gender. Due to lack of power after dividing by attendance of alternative childcares, we rely solely on the combining functions rather than the exact non-parametric tests listed in Tables~\ref{table:summary} and~\ref{table:massiveall}. We adjust for dependence across outcomes and for pretesting in constructing standard errors (see Appendix~\ref{appendix:methodology}). We account for non-random selection into alternative childcare using matching, as described in Section~\ref{sec:parameters}.
 
@@ -58,8 +58,8 @@ The effects on crime highlight that females were highly impacted by ABC/CARE, es
 \end{subfigure}
 \footnotesize
 \justify
-\textbf{Note:} Panel (a) displays the cumulative distribution function of enrollment in alternatives by gender. Panel (b) displays how girls and boys separately fit into the overall (girls and boys pooled) distribution of socioeconomic disadvantage. Panel (c) displays how girls who did not enroll and girls who enrolled in alternatives fit into the overall female distribution of socioeconomic disadvantage. Panel (d) is analogous to Panel (c) for boys. Our measure of socioeconomic disadvantage is a latent of the following variables: Mother's age, education, IQ, marital status, and employment, as well as number of siblings and father's presence at home.
-\textbf{[JJH: Mother working? Income?]}
+\textbf{Note:} Panel (a) displays the cumulative distribution function of enrollment in alternatives by gender. Panel (b) displays how girls and boys separately fit into the overall (girls and boys pooled) distribution of socioeconomic disadvantage. This is measured by constructing a factor of maternal age, education, and IQ, number of siblings, and HRI score all measured at baseline. Panel (c) displays how girls who did not enroll and girls who enrolled in alternatives fit into the overall female distribution of socioeconomic disadvantage. Panel (d) is analogous to Panel (c) for boys. Our measure of socioeconomic disadvantage is a latent of the following variables: Mother's age, education, IQ, marital status, and employment, as well as number of siblings and father's presence at home.
+\textbf{[JJH: Mother working? Income?][AZ: The factor to measure disadvantage that we use in Table~\ref{table:disadtests} is comprised of: maternal age, maternal education, maternal IQ, number of siblings, HRI score. All of these are measured at baseline. This explanation has been added.]}
 \end{sidewaysfigure}
 
 The difference in the comparison of treatment to staying at home and alternative preschools suggests that boys and girls faced different situations of socio-economic disadvantaged at home. Figure~\ref{figure:socdis} investigates this. We start by noting that take-up of alternatives does not differ by gender (Panel~\ref{figure:altgender}). What does differ by gender is socioeconomic disadvantage. We create a latent measure of socioeconomic disadvantage at baseline using the following variables: Mother's age, education, IQ, marital status, and employment, as well as number of children and father's presence at home. We assess how girls and boys fit into the overall distribution of this latent in the control group. Boys are disproportionately more advantaged than girls (Panel~\ref{figure:disadgender}).\footnote{Note that this measure is based on baseline characteristics, so this result holds for the treatment group.} Because girls' families were more resource constrained if compared to their male counterparts, girls in the control group were taken care of in a more disadvantaged environment or went to lower-quality preschools. Thus, they benefited more than boys when compared to the next best alternative as perceived by their parents, as documented in Section~\ref{sec:treatment-effects}.
@@ -94,7 +94,7 @@ The difference in the comparison of treatment to staying at home and alternative
 We formally test the difference in disadvantage across boys and girls in Table~\ref{table:disadtests}. We reject the null of a common distribution of our measure of socioeconomic disadvantage across girls and boys (at baseline). In Panels~\ref{figure:disadgirls} and~\ref{figure:disadboys} of Figure~\ref{figure:socdis}, we further dissect socioeconomic disadvantage within genders, and provide the corresponding tests in Table~\ref{table:disadtests}.
 
 
-Parents of more advantaged girls are more likely to send their daughters to alternative preschools \textbf{[JJH: Do they work more?][AZ: Yes, the mothers work more for girls who attend alternative childcare. 23\% of the girls who attend alternative childcare have working mothers while no girls who stay at home have working mothers. The factor to measure disadvantage that we use in Table~\ref{table:disadtests} is comprised of: maternal age, maternal education, maternal IQ, number of siblings, HRI score. All of these are measured at baseline.]}. Parents of more advantaged boys are more likely to send keep their sons at home. This provides an explanation why girls benefited more from treatment if compared to staying at home, which would be a more disadvantaged environment if compared to the male environments. Boys benefited more from treatment when compared to attending alternative childcare given that their parents plausibly sent them to lower-quality alternatives due to a lack of resources or the alternatives were worse complements to home learning environments. \textbf{[JJH: The girls had lower quality environments.]}
+Parents of more advantaged girls are more likely to send their daughters to alternative preschools \textbf{[JJH: Do they work more?][Yes, the mothers work more for girls who attend alternative childcare. 23\% of the girls who attend alternative childcare have working mothers while no girls who stay at home have working mothers. The factor to measure disadvantage that we use in Table~\ref{table:disadtests} is comprised of: maternal age, maternal education, maternal IQ, number of siblings, HRI score. All of these are measured at baseline.]}. Parents of more advantaged boys are more likely to send keep their sons at home. This provides an explanation why girls benefited more from treatment if compared to staying at home, which would be a more disadvantaged environment if compared to the male environments. Boys benefited more from treatment when compared to attending alternative childcare given that their parents plausibly sent them to lower-quality alternatives due to a lack of resources or the alternatives were worse complements to home learning environments. \textbf{[JJH: The girls had lower quality environments.]}
 
 
 
