corrected jenna's edits

--- a/sections/2_data.tex
+++ b/sections/2_data.tex
@@ -1,6 +1,6 @@
 We analyze a combined sample of the two closely related programs: ABC and CARE. Table~\ref{tab:abc-care-characteristics} summarizes their characteristics. Both interventions were implemented by researchers at the Frank Porter Graham Center (FPG) at the University of North Carolina Chapel Hill, and targeted children from disadvantaged families in the Chapel Hill area. ABC had four cohorts born between 1972 and 1977, and CARE had two cohorts born between 1978 and 1980. Eligibility was determined on the basis of the High Risk Index (HRI) developed for ABC and adapted for CARE \citep{Ramey_Smith_1977_AJMD,Wasik_Ramey_etal_1990_CD}. Components of the HRI include father's presence, parental employment, and participation in welfare.\footnote{See Appendix~\ref{app:eligibility-pop} for the full list of the determinants of HRI \citep{Ramey_Smith_1977_AJMD, Wasik_Ramey_etal_1990_CD, Ramey_Campbell_1991_childreninpoverty}.} Based on these eligibility requirements, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished} calculate that 43\% of African Americans were eligible during the intervention and that 19\% of all African American children would be eligible now.
 
-Both interventions involved intensive center-based care for subjects in the treatment group starting at 8 weeks and continuing until age 5 before the children started kindergarten. In addition to free access to this center-based care, treatment-group subjects also received daily health screenings, diapers, and formula until 6 months. Control-group families received diapers and formula as well for the same period of time \citep{Wasik_Ramey_etal_1990_CD,Ramey_Campbell_1991_childreninpoverty}. Between ages 5 and 8, there was an additional component of treatment with home visits to tutor the children and to encourage families to be involved in their child's schooling. In CARE, all the subjects who received center-based care also received this school-age component. In ABC, treatment status of this component was randomized. We do not analyze this aspect the treatment because previous work has found this component of the treatment to have no significant effects \citep{Campbell_Ramey_etal_2002_ADS,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.\footnote{The ineffectiveness of later-age home visits is not incocnsistent with the evidence for early age home visits reported in \citet{Doyle_etal_2015_LCC_Early-Skill-Formation-Report} and \citet{Gertler_Heckman_etal_2014_Science}.}
+Both interventions involved intensive center-based care for subjects in the treatment group starting at 8 weeks and continuing until age 5 before the children started kindergarten. In addition to free access to this center-based care, treatment-group subjects also received daily health screenings, diapers, and formula until 6 months. Control-group families received diapers and formula as well for the same period of time \citep{Wasik_Ramey_etal_1990_CD,Ramey_Campbell_1991_childreninpoverty}. Between ages 5 and 8, there was an additional component of treatment with home visits to tutor the children and to encourage families to be involved in their child's schooling. In CARE, all the subjects who received center-based care also received this school-age component. In ABC, treatment status of this component was randomized. We do not analyze this aspect the treatment because previous work has found this component of the treatment to have no significant effects \citep{Campbell_Ramey_etal_2002_ADS,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.
 
 \begin{table}[!htbp]
 \centering
@@ -18,7 +18,7 @@ Both interventions involved intensive center-based care for subjects in the trea
 
 The program focused on developing language, cognition, and social-emotional skills. During ABC and CARE, the \textit{Learning Games} curriculum was developed and refined \citep{Sparling_Lewis_1979_BOOKLearninggamesFirstThree,Sparling_Lewis_1984_BOOKLearningGamesThreesFours}. Other curricula used in the program emphasized child-led learning of skills important for future learning \citep{Ramey_Smith_1977_AJMD, Wasik_Ramey_etal_1990_CD, Ramey_Campbell_1991_childreninpoverty}. The teachers and classroom aids were trained continuously throughout the intervention. Researchers and child development experts at FPG observed the classroom interactions and relayed detailed feedback to the instructors \citep{Ramey-etal_2012-ABC}.\footnote{These aspects of the program relate to structural quality rather than process quality, i.e., the daily experiences of the children \citep{Thomason_LaParo_2009_EED}. Aspects of structural quality, including low child-teacher ratios, small group sizes, and teacher education, are often associated with high process quality \citep{Phillipsen_etal_1997_ECRQ}. However, recent studies find that curricula and professional development are even more highly correlated with process quality. This is especially true if the curricula and professional development are informed by knowledge of child development \citep{Slot_etal_2015_Dutch_ECRQ}. Although measures of process quality (e.g., measures of teacher-child interactions) are not available for the ABC/CARE subjects, the curricula and professional development offerings were exceedingly intensive, especially compared to standards of that era \citep{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}.}
 
-CARE included an additional arm of treatment. Besides the services offered in ABC, those in the CARE treatment group also received home visiting from birth to age 5. Home visiting consisted of biweekly visits focusing on parental problem-solving skills. To individually test this home-visiting component, there was a third randomized group ($N=23$) that received only the home visiting component, but not center-based care \citep{Wasik_Ramey_etal_1990_CD}. In light of previous analyses of CARE finding no effect of the home-visiting component, we drop this last group from our analysis.\footnote{\citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} and \citet{Burchinal_etal_2006_MSRCD_IV-Growth-Curve} test and do not reject the hypothesis of no treatment effects for this additional component of CARE. This evidence for home visiting at the later ages is not inconsistent with the evidence on the effectiveness of home visits for earlier ages \citet{Doyle_2017_School,Gertler_Heckman_etal_2014_Science}.} These analyses justify merging the treatment groups of ABC and CARE. We henceforth analyze the samples as coming from a single ABC/CARE program.
+CARE included an additional arm of treatment. Besides the services offered in ABC, those in the CARE treatment group also received home visiting from birth to age 5. Home visiting consisted of biweekly visits focusing on parental problem-solving skills. To individually test this home-visiting component, there was a third randomized group ($N=23$) that received only the home visiting component, but not center-based care \citep{Wasik_Ramey_etal_1990_CD}. In light of previous analyses of CARE finding no effect of the home-visiting component, we drop this last group from our analysis.\footnote{\citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} and \citet{Burchinal_etal_2006_MSRCD_IV-Growth-Curve} test and do not reject the hypothesis of no treatment effects for this additional component of CARE. This evidence for home visiting at the later ages is not inconsistent with the evidence on the effectiveness of home visits for earlier ages \citep{Doyle_2017_School,Gertler_Heckman_etal_2014_Science}.} These analyses justify merging the treatment groups of ABC and CARE. We henceforth analyze the samples as coming from a single ABC/CARE program.
 
 Table~\ref{tab:abccare-baseline} compares pre-program variables for experimental and gender groups. The only significant difference is seen in the HRI score, which is 1.78 points lower for males than for females. However, after accounting for multiple hypothesis testing using the Holm test, the difference in HRI score is no longer statistically significant.\footnote{See \citet{Holme_1979_Sequential_SJS} for a description of the test. For a more detailed discussion, see Appendix~\ref{app:eligibility-pop}.}
 
