--- a/sections/6_conclusion.tex
+++ b/sections/6_conclusion.tex
@@ -4,4 +4,4 @@ This paper examines gender differences in the impacts of treatment of an influen
 
 We present results suggesting that lower-quality childcare arrangements are detrimental for boys relative to staying at home (if high-quality arrangements are not an option). We suggest that an explanation for this is the difference in baseline disadvantage between the boys and girls in the sample. The boys are more advantaged, with the more advantaged boys being more likely to stay at home. This explains why the effects are larger for males in comparison to alternative care than in comparison to staying at home. For girls, there is not an observed difference in advantage between the different counterfactual scenarios. The effects are still larger for girls in comparison to staying at home than in comparison to alternative care. This again reflects the disadvantage that the girls faced, although the difference between these estimates is smaller than the difference for boys.
 
-Our analysis sounds a cautionary note about the value of early childcare programs. In the past decade, many politicians and pundits have warmly embraced early childhood programs as solutions for reducing inequality and promoting social mobility. Little attention has been paid to the quality of those programs. \cite{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished} show that they have a high economic rate of return. Even though we find that females benefit more in terms of effect sizes and in the number of statistically significant treatment effects than do males overall, after weighing for the social benefits of reduced crime and improved health, education, and employment, the social return is higher for males than females.
+Our analysis sounds a cautionary note about the value of early childcare programs. In the past decade, many politicians and pundits have warmly embraced early childhood programs as solutions for reducing inequality and promoting social mobility. Little attention has been paid to the quality of those programs. \cite{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished} show that they have a high economic rate of return. Even though we find that females benefit more in terms of effect sizes and in the number of statistically significant treatment effects than do males, after weighing for the social benefits of reduced crime and improved health, education, and employment, the social return is higher for males than females.
